objects/Product_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Gp__c</fullName>
        <label>Gp</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Quotes</relationshipLabel>
        <relationshipName>Product_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_GP__c</fullName>
        <label>Product GP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Product Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Quotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>